# lean-pool

./: .gitignore  .zenodo.json  AGENTS.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  FAILURE.md  IMPORT_NOTES.md  LeanPool.lean  MOTIVATION.md  Makefile  NOTICE  README.md  lake-manifest.json  lakefile.toml
.github/: CODEOWNERS  CODE_QUALITY.md  REVIEW_RULES.md  copilot-instructions.md
.github/instructions/: review.instructions.md
.github/workflows/: content-pr-guard.yml  create-release.yml  discovery.yml  docs.yml  lean_action_ci.yml  llm-review.yml  (+10 more)
LeanPool/: ABCExceptions.lean  AFormalizationOfBorelDeterminacyInLean.lean  AgreeToDisagree.lean  AharoniKorman.lean  AndersonConjecture.lean  Apportionment.lean  ArchonFirstProofResults.lean  ArtinWedderburn.lean  BannaiBannaiStanton.lean  Basic.lean  BinomialAdd.lean  Biswal.lean  BrauerGroupNew.lean  Brouwer.lean  BruhatTits.lean  Burkholder.lean  CencovPetz.lean  Chomsky.lean  Chudnovsky.lean  CircuitComplexity.lean  Circuitlib.lean  Clawristotle.lean  CompactSpectral.lean  Computability.lean  ComputableReal.lean  ConnesKreimer.lean  CramerWold.lean  CriticalPortraits.lean  DeadEnds.lean  DemazureOperatorsLean.lean  DemazureProduct.lean  Desargues.lean  DirectedTopologyLean4.lean  DomainTheory.lean  Duality.lean  EcTateLean.lean  Egrs75.lean  Erdos1196.lean  Erdos137.lean  Erdos367.lean  (+88 more)
candidates/: README.md  claude-queue.txt  codex-queue.txt  decisions.jsonl  discovered.yml  manual.txt  shortlist.md
docbuild/: lake-manifest.json  lakefile.toml
python/: README.md  pyproject.toml
python/lean_pool/: __init__.py  partial_port_audit.py  pr_advisory.py  quality.py  review.py  semantic_dedup.py  stats.py
python/lean_pool/aggregator/: __init__.py  __main__.py  cloner.py  discovery.py  manual.py  render.py  reservoir.py  triage.py
python/tests/: test_partial_port_audit.py  test_pr_advisory.py  test_quality.py  test_review.py  test_semantic_dedup.py  test_stats.py
python/tests/aggregator/: test_cloner.py  test_discovery.py  test_manual.py  test_render.py  test_reservoir.py  test_triage.py
scripts/: import-formalization.sh  run-import-queue.sh
(+2587 files in other folders)
