[project]
name = "lean-pool-tools"
version = "0.0.1"
description = "Python tooling for the lean-pool repository (Reservoir aggregation, candidate filtering)."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
]


[dependency-groups]
dev = [
    "ruff>=0.9",
]
test = [
    "pytest>=8.3",
    "pytest-cov>=6.1",
]
review = [
    "openai>=1.50",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

# ==========================================
[tool.ruff]
target-version = "py313"
line-length = 88
exclude = [".venv", "venv", "__pypackages__"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "D",    # pydocstyle
]

ignore = [
    "D104",  # ignore public package lack of docstring
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
